# Curtains

./: .gitignore  README.md  README.rst  pyproject.toml  xri_plot_white.mplstyle
.github/workflows/: ci.yml
ModelSim/: CMakeLists.txt  ModelDefinitionDialog.cpp  ModelDefinitionDialog.h  Models.cpp  Models.h  QRangeSlider.hpp  RenderWindow.cpp  RenderWindow.h  SpectrumDialog.cpp  SpectrumDialog.h  imagelabel.cpp  imagelabel.h  main.cpp  widget.cpp  widget.h
ModelSim/Dialogs/: ModelDefinitionDialog.cpp  ModelDefinitionDialog.h  SpectrumDialog.cpp
ModelSim/Widgets/: ColorScaleWidget.cpp  ColorScaleWidget.h
curtains/: analysis.py  images.py  instrument.py
curtains/models/: arf.fits
src/curtains/: analysis.py  images.py  instrument.py  process.py
src/curtains/models/: rmf.fits
tests/: test_basic.py
