[build-system]
requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"

[project]
name = "curtains" 
version = "0.0.1"
description = "Simulation of X-ray interferometric observations"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    
]

[tool.setuptools.packages.find]
where = ["src"]
